WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94641
V8 shouldn't have its own way of printing cross-origin error messages
https://bugs.webkit.org/show_bug.cgi?id=94641
Summary
V8 shouldn't have its own way of printing cross-origin error messages
Adam Barth
Reported
2012-08-21 16:02:31 PDT
V8 shouldn't have its own way of printing cross-origin error messages
Attachments
Patch
(21.75 KB, patch)
2012-08-21 16:06 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-08-21 16:06:50 PDT
Created
attachment 159788
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-08-21 16:09:25 PDT
Comment on
attachment 159788
[details]
Patch OK.
WebKit Review Bot
Comment 3
2012-08-21 18:50:17 PDT
Comment on
attachment 159788
[details]
Patch Clearing flags on attachment: 159788 Committed
r126249
: <
http://trac.webkit.org/changeset/126249
>
WebKit Review Bot
Comment 4
2012-08-21 18:50:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug