V8 shouldn't have its own way of printing cross-origin error messages https://bugs.webkit.org/show_bug.cgi?id=94641

Reviewed by Eric Seidel.

Source/WebCore:

V8 used to re-implement (poorly) the code for printing out an error
message when a same-origin check failed. This patch deletes that code
in favor of just calling the WebCore version of the code. There more to
clean up here, but I had to stop before spidering over the whole
codebase.

* bindings/generic/BindingSecurity.cpp:
(WebCore::canAccessDocument):
* bindings/js/BindingState.cpp:
* bindings/js/BindingState.h:
* bindings/v8/BindingState.cpp:
(WebCore::printErrorMessageForFrame):
* bindings/v8/BindingState.h:
(WebCore):
* bindings/v8/V8DOMWindowShell.cpp:
(WebCore::reportUnsafeJavaScriptAccess):
* bindings/v8/V8Proxy.cpp:
* bindings/v8/V8Proxy.h:
(V8Proxy):

LayoutTests:

Update these results to reflect the new error messages. These error
messages are both more correct and more like JavaScriptCore.

* platform/chromium/http/tests/security/cross-frame-access-private-browsing-expected.txt: Added.
    - We don't use the private browsing setting to implement private browsing.
* platform/chromium/http/tests/security/cross-frame-access-document-direct-expected.txt:
* platform/chromium/http/tests/security/inactive-document-with-empty-security-origin-expected.txt:
* platform/chromium/http/tests/security/listener/xss-inactive-closure-expected.txt:
* platform/chromium/http/tests/security/xss-eval-expected.txt:
    - Previously, we were incorrectly using the first script rather
      than the active script when printing the error message.
* platform/chromium/http/tests/security/listener/xss-JSTargetNode-onclick-addEventListener-expected.txt: Removed.
* platform/chromium/http/tests/security/listener/xss-JSTargetNode-onclick-shortcut-expected.txt: Removed.
* platform/chromium/http/tests/security/listener/xss-XMLHttpRequest-addEventListener-expected.txt: Removed.
* platform/chromium/http/tests/security/listener/xss-XMLHttpRequest-shortcut-expected.txt: Removed.
* platform/chromium/http/tests/security/listener/xss-window-onclick-addEventListener-expected.txt: Removed.
* platform/chromium/http/tests/security/listener/xss-window-onclick-shortcut-expected.txt: Removed.
    - These results are now identical to JSC.


Canonical link: https://commits.webkit.org/112481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126249 268f45cc-cd09-0410-ab3c-d52691b4dbfc