Source/WebCore/bindings/v8/BindingState.h
@@ -31,6 +31,8 @@
 #ifndef BindingState_h
 #define BindingState_h
 
+#include <wtf/text/WTFString.h>
+
 namespace WebCore {
 
 class DOMWindow;
@@ -55,7 +57,8 @@ Frame* firstFrame(BindingState*);
 Frame* currentFrame(BindingState*);
 Document* currentDocument(BindingState*);
 
-void immediatelyReportUnsafeAccessTo(BindingState*, Document* targetDocument);
+// FIXME: This function is redundant with the copy in JSDOMBinding.cpp.
+void printErrorMessageForFrame(Frame*, const String& message);
 
 }
 
